--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,11 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>3.9.0</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
   <build>
-    <finalName>JenkinsWar</finalName>
+    <finalName>Jenkins</finalName>
   </build>
 </project>
